--- a/content.css
+++ b/content.css
@@ -1,29 +1,37 @@
-/* .page {
-  width:
-  height:
-  line-gap-override:100px;
-} */
+body {
+  background-color: #D3D0CB;
+}
 
 #article_title {
   font-family: 'Anton';
   letter-spacing: 3px;
   font-weight: bolder;
+  color: #461220;
 }
 
 #intro {
   font-family: 'Oswald';
+  color: #8C2F39;
 }
 
 .question{
   font-family: 'Railway';
-  font-weight: bold;
+  font-weight: bolder;
+  color: #4C5760;
+  font-size: 15px;
+  margin-bottom: 0px;
 }
 
 .answer{
   font-family: 'Railway';
+  color: #4C5760;
+  font-weight:lighter;
+  margin-top: 0px;
 }
 
 #block_quote {
   font-family: 'Oswald';
   font-weight: bolder;
+  font-size: 25px;
+  color: #8C2F39;
 }
